jelu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jelu
  namespace: jelu
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: jelu.skj.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jelu
                port:
                  number: 11111
  tls:
    - hosts:
        - jelu.skj.dev
      secretName: jelu-skj-dev-cert
